# wfsa

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
test/: test_field.py  test_semiring.py  tests.py
wfsa/: __init__.py  base.py  field_wfsa.py  semiring_wfsa.py  wfsa.py
