[project]
name = "wfsa"
version = "0.1"
description = "Weighted finite-state automata over fields and semirings."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tim Vieira" },
]

dependencies = [
    "numpy",
    "graphviz",
    "semirings",
    "frozendict",
    "arsenal @ git+https://github.com/timvieira/arsenal",
]

[project.optional-dependencies]
test = [
    "pytest",
    "leftcorner",
]

[project.urls]
Homepage = "https://github.com/timvieira/wfsa"
Repository = "https://github.com/timvieira/wfsa"

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E731", "E701", "F401", "E741", "E743", "E702", "E402"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["test"]
